--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,16 @@ body {
   background-color: rgb(104, 101, 116);
   color: #f2f2f2;
   -webkit-box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
--moz-box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
-box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
+  -moz-box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
+  box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
 }
 
-.content {padding:10px; }
+.content {
+  padding:10px; 
+}
 
 /* Header/Logo Title */
-.header {
+.header{
   overflow: hidden;
   background: #ffffff;
   color: white;
@@ -347,5 +349,3 @@ box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
    .text {font-size: 11px}
  }
  
-
-
