--- a/styles.css
+++ b/styles.css
@@ -7,32 +7,68 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #474655; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #474655; 
+}
 /* Style the body */
 body {
-  font-family: Arial;
   margin: 0;
-  
 }
 .web{
   background-color: #474655;
   color: azure;
   padding-left: 1%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.icons2{
+  margin-top: 1%;
 }
 .content_d{
   background-color: rgb(104, 101, 116);
   color: #f2f2f2;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding-left: 10px;
+  font-size: 2vh;
   -webkit-box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
   -moz-box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
   box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
+  text-align: left;
 }
-
-.content {
-  padding:10px; 
+.catpic{
+  max-height: 600px;
+  height: 53.5vw;
+  border-radius: 2%;
+  margin-bottom: 8%;
+  margin-top: 2.5%;
 }
+.catpic:hover {
+  box-shadow: 0 0 10px 1px rgba(0, 140, 186, 0.5);
+}
+.cat_div{
+  width: 90px;
+}
+.content {padding:10px; }
 
 /* Header/Logo Title */
-.header{
+.header {
   overflow: hidden;
   background: #ffffff;
   color: white;
@@ -198,16 +234,9 @@ body {
   transition: 0s;
   opacity: 1;
   pointer-events: auto
+  
 }
-.sidebar .profile_content{
-  position: absolute;
-  color: #fff;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  margin-bottom: 110px;
-  top: 20px;
-}
+
 /*
 .profile #log_out{
   position: absolute;
@@ -237,7 +266,6 @@ body {
   transition: all 0.5s ease;
   background-size: contain !important;
   background-position: center center !important;
-  background-color: rgb(85, 85, 85);
 }
 .sidebar.active ~ .home_content{
   z-index: 100;
@@ -348,4 +376,3 @@ body {
  @media only screen and (max-width: 300px) {
    .text {font-size: 11px}
  }
- 
