--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
-
-    /* Google Font CDN Link */
+/* Google Font CDN Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
+  font-family: "Poppins", sans-serif;
 }
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -14,23 +15,25 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #474655; 
+  background: #474655;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #474655; 
+  background: #474655;
 }
+
 /* Style the body */
 body {
   margin: 0;
 }
-.web{
+
+.web {
   padding-top: 1%;
   padding-bottom: 1%;
   background: #474655;
@@ -41,10 +44,12 @@ body {
   justify-content: center;
 
 }
-.icons2{
+
+.icons2 {
   margin-top: 1%;
 }
-.content_d{
+
+.content_d {
   background-color: rgb(104, 101, 116);
   color: #f2f2f2;
   border-bottom-left-radius: 5px;
@@ -56,63 +61,76 @@ body {
 
 
 }
-.textcover{
+
+.textcover {
   margin-left: 5%;
 }
-div.text_inside{
+
+div.text_inside {
   text-align: center;
 
   height: 12%;
   font-size: max(1vw, 20px);
-  
+
 }
+
 div.text_inside p {
   display: inline-block;
   text-align: left;
 }
-.catpic{
+
+.catpic {
   max-height: 600px;
   height: 53.5vw;
   border-radius: 2%;
   margin-bottom: 8%;
   margin-top: 2.5%;
-  
-  
+
+
 }
+
 .catpic:hover {
   box-shadow: 0 0 10px 1px rgba(0, 140, 186, 0.5);
 }
-.animatedtext{
+
+.animatedtext {
   color: #fff;
   text-transform: uppercase;
   line-height: 40px;
 }
-.animatedtext-content{
+
+.animatedtext-content {
   display: block;
-  opacity: none;
+  opacity: 0;
   animation: rText .5s forwards;
 }
-.animatedtext-second{
-  animation-delay: .375s; <!-- need to be recoded -->
-  
+
+.animatedtext-second {
+  animation-delay: .175s;
+
 }
+
 @keyframes rText {
-  from{
+  from {
     transform: translateY(20px);
   }
-  to{
+
+  to {
     opacity: 1;
     transform: none;
   }
 }
 
-.cat_div{
+.cat_div {
 
   text-align: center;
   display: block;
 
 }
-.content {padding:10px; }
+
+.content {
+  padding: 10px;
+}
 
 /* Header/Logo Title */
 .header {
@@ -121,17 +139,21 @@ div.text_inside p {
   color: white;
   background-size: cover !important;
 }
-.header_text{
+
+.header_text {
   margin-bottom: -50px;
 }
-.h1{
-    margin-left: 15px;
+
+.h1 {
+  margin-left: 15px;
 }
-::selection{
+
+::selection {
   color: #fff;
   background: #11101d;
 }
-.sidebar{
+
+.sidebar {
   position: fixed;
   top: 0;
   left: 0;
@@ -144,10 +166,12 @@ div.text_inside p {
   box-shadow: 0 0 5px black;
 
 }
-.sidebar.active{
+
+.sidebar.active {
   width: 240px
 }
-.sidebar .logo_content .logo{
+
+.sidebar .logo_content .logo {
   color: #fff;
   display: flex;
   height: 50px;
@@ -157,19 +181,23 @@ div.text_inside p {
   pointer-events: none;
   transition: all 0.5s ease;
 }
-.sidebar.active .logo_content .logo{
+
+.sidebar.active .logo_content .logo {
   opacity: 1;
   pointer-events: none;
 }
-.logo_content .logo i{
+
+.logo_content .logo i {
   font-size: 28px;
   margin-right: 5px;
 }
-.logo_content .logo .logo_name{
+
+.logo_content .logo .logo_name {
   font-size: 20px;
   font-weight: 400;
 }
-.sidebar #btn{
+
+.sidebar #btn {
   position: absolute;
   color: #fff;
   top: 6px;
@@ -183,13 +211,16 @@ div.text_inside p {
 
 
 }
-.sidebar.active #btn{
+
+.sidebar.active #btn {
   left: 90%;
 }
-.sidebar ul{
+
+.sidebar ul {
   margin-top: 20px;
 }
-.sidebar ul li{
+
+.sidebar ul li {
   position: relative;
   height: 50px;
   width: 100%;
@@ -198,11 +229,12 @@ div.text_inside p {
   line-height: 50px;
   margin: 5px 0;
 }
-.sidebar ul li .tooltip{
+
+.sidebar ul li .tooltip {
   position: absolute;
   left: 125px;
   top: 0;
-  transform: translate(-50% , -50%);
+  transform: translate(-50%, -50%);
   border-radius: 6px;
   height: 35px;
   width: 120px;
@@ -215,16 +247,18 @@ div.text_inside p {
   pointer-events: none;
   display: block;
 }
-.sidebar.active ul li .tooltip{
+
+.sidebar.active ul li .tooltip {
   display: none;
 }
-.sidebar ul li:hover .tooltip{
+
+.sidebar ul li:hover .tooltip {
   transition: all 0.5s ease;
   opacity: 1;
   top: 50%
 }
 
-.sidebar ul li .bx-search{
+.sidebar ul li .bx-search {
   position: absolute;
   z-index: 99;
   color: #fff;
@@ -232,7 +266,7 @@ div.text_inside p {
   transition: all 0.5 ease;
 }
 
-.sidebar ul li a{
+.sidebar ul li a {
   color: #fff;
   display: flex;
   align-items: center;
@@ -241,12 +275,14 @@ div.text_inside p {
   white-space: nowrap;
   transition: all 0.4s ease;
 }
-.sidebar ul li a:hover{
+
+.sidebar ul li a:hover {
   color: #11101d;
   background: #fff;
   box-shadow: rgba(255, 255, 255, 0.4) 0px 3px 10px, rgba(255, 255, 255, 0.3) -5px 5px;
 }
-.sidebar ul li i{
+
+.sidebar ul li i {
   font-size: 18px;
   font-weight: 400;
   height: 50px;
@@ -255,21 +291,22 @@ div.text_inside p {
   line-height: 50px;
   text-align: center;
 }
-.sidebar .links_name{
+
+.sidebar .links_name {
   font-size: 15px;
   font-weight: 400;
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s ease;
 }
-.sidebar.active .links_name{
+
+.sidebar.active .links_name {
   transition: 0s;
   opacity: 1;
   pointer-events: auto
-  
 }
 
-.home_content{
+.home_content {
   position: absolute;
   height: 100%;
   width: calc(100% - 78px);
@@ -278,113 +315,139 @@ div.text_inside p {
   background-size: contain !important;
   background-position: center center !important;
 }
-.sidebar.active ~ .home_content{
+
+.sidebar.active~.home_content {
   z-index: 100;
-  
+
 }
-.home_content .text{
+
+.home_content .text {
   font-size: 25px;
   color: #1d1b31;
   margin: 12px;
-  
-  
+
+
 }
-.sidebar.active ~ .home_content{
+
+.sidebar.active~.home_content {
   width: calc(100% - 240px);
   left: 240px;
-  
+
 }
 
- /* slider */
+/* slider */
 
- * {box-sizing: border-box;}
- body {font-family: Verdana, sans-serif;}
- .mySlides {display: none;}
- img {vertical-align: middle;}
- 
- 
- /* Slideshow container */
- .slideshow-container {
-   min-width: 800px;
-   position: relative;
-   margin: auto;
-   background-size: contain !important;
-   background-position: center center !important;
- }
- 
- /* Caption text */
- .text {
-   color: #f2f2f2;
-   font-size: 15px;
-   padding: 8px 12px;
-   position: absolute;
-   bottom: 8px;
-   width: 100%;
-   text-align: center;
- }
- 
- /* Number text (1/3 etc) */
- .numbertext {
-   color: #f2f2f2;
-   font-size: 12px;
-   padding: 8px 12px;
-   position: absolute;
-   top: 0;
-   
- }
-   
-   .container{
-   width: 100%;
-   }
- 
- /* The dots/bullets/indicators */ /*deleted */
- .dot {
-   height: 15px;
-   width: 15px;
-   margin: 0 2px;
-   background-color: #bbb;
-   border-radius: 50%;
-   display: inline-block;
-   transition: background-color 0.6s ease;
- }
- 
- .dot1 {
-   height: 15px;
-   width: 15px;
-   margin: 0 2px;
-   background-color: rgb(99, 0, 0);
-   border-radius: 50%;
-   display: inline-block;
-   transition: background-color 0.6s ease;
- }
- 
- .sliderimg{
-   width: 100%;
-   background-size: cover !important;
- }
- 
- /* Fading animation */
- .fade {
-   -webkit-animation-name: fade;
-   -webkit-animation-duration: 1.5s;
-   animation-name: fade;
-   animation-duration: 1.5s;
-   background-size: cover !important;
-   background-position: center center !important;
- }
- 
- @-webkit-keyframes fade {
-   from {opacity: .4} 
-   to {opacity: 1}
- }
- 
- @keyframes fade {
-   from {opacity: .4} 
-   to {opacity: 1}
- }
- 
- /* On smaller screens, decrease text size */
- @media only screen and (max-width: 300px) {
-   .text {font-size: 11px}
- }
- 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Verdana, sans-serif;
+}
+
+.mySlides {
+  display: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+
+/* Slideshow container */
+.slideshow-container {
+  min-width: 800px;
+  position: relative;
+  margin: auto;
+  background-size: contain !important;
+  background-position: center center !important;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+
+}
+
+.container {
+  width: 100%;
+}
+
+/* The dots/bullets/indicators */
+/*deleted */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dot1 {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: rgb(99, 0, 0);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.sliderimg {
+  width: 100%;
+  background-size: cover !important;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+  background-size: cover !important;
+  background-position: center center !important;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {
+    font-size: 11px
+  }
+}
