--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ div.text_inside p {
 
 .catpic:hover {
   box-shadow: 0 0 10px 1px rgba(0, 140, 186, 0.5);
+  transition: 0.3s;
 }
 
 .animatedtext {
