--- a/custom.css
+++ b/custom.css
@@ -1,14 +1,21 @@
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, sans-serif;
+}
+.mySlides {
+  display: none;
+}
+img {
+  vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
-
 }
 
 /* Caption text */
@@ -31,219 +38,218 @@ img {vertical-align: middle;}
   top: 0;
 }
 
-
-
-
 @keyframes colorf {
   from {
     background-color: rgb(0, 131, 131);
   }
-  to {background-color: rgb(136, 51, 51);
+  to {
+    background-color: rgb(136, 51, 51);
   }
 }
 @keyframes colors {
   from {
     background-color: rgb(136, 51, 51);
   }
-  to {background-color: rgb(126, 82, 0);
+  to {
+    background-color: rgb(126, 82, 0);
   }
 }
 @keyframes colort {
   from {
     background-color: rgb(126, 82, 0);
   }
-  to {background-color: rgb(0, 131, 131);
+  to {
+    background-color: rgb(0, 131, 131);
   }
 }
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+  .text {
+    font-size: 11px;
+  }
 }
-  .hr{
-    color: white;
-  }
-  .h2x{
-    color: white;
-    font-size: 1rem;
-  }
-  .row{
-    margin: 0;
-  }
-  .h1 {
-    font-size: 4rem;
-    color:white;
-  }
-  .h2{
-    color:#9b9b9b;
+.hr {
+  color: white;
+}
+.h2x {
+  color: white;
+  font-size: 1rem;
+}
+.row {
+  margin: 0;
+}
+.h1 {
+  font-size: 4rem;
+  color: white;
+}
+.h2 {
+  color: #9b9b9b;
+  font-size: 1rem;
+}
+.h3 {
+  color: #9b9b9b;
+  font-size: 1.5rem;
+}
+.h2xl {
+  color: white;
+}
 
-  }
-  .h3{
-    color:#9b9b9b;
-    font-size: 1.5rem;
-  }
-  .h2xl{
-    color:white;
+.jumbotron {
+  min-width: 250px;
+  min-height: 500px;
+  background-position: center;
+}
 
+.card-deck {
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
+.card-text {
+  color: #9b9b9b;
+  padding-bottom: 1rem;
+}
+.card {
+  background-color: #1d1d1d;
+  border-color: #11101d;
+  color: white;
+  border-radius: 1rem;
+  -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+}
 
-  }
+.card-img-bottom,
+.card-img-mid,
+.card-img-top {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  opacity: 100%;
+}
 
+.main {
+  background-color: #1d1d1d;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+}
+
+.progress-bar {
+  text-align: right;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: block;
+  width: 90%;
+  position: relative;
+  bottom: 0;
+}
+.progress {
+  text-align: right;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: block;
+  width: 90%;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 20px;
+}
+
+::selection {
+  color: #fff;
+  background: #11101d;
+}
+
+.bx {
+  text-decoration: none;
+  color: #fff;
+  margin-right: 1rem;
+  font-size: 28px;
+  opacity: 100%;
+}
+
+.navbar {
+  backdrop-filter: blur(10px);
+  background-color: rgba(73, 73, 73, 0.7);
+  position: fixed;
+  padding-top: 1rem;
+  width: 100%;
+  z-index: 999;
+  -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
+  -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
+  box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
+}
+
+.color1 {
+  animation: colorf 5.5s;
+}
+.color2 {
+  animation: colors 5.5s;
+}
+.color3 {
+  animation: colort 5.5s;
+}
+
+@media screen and (max-width: 767px) {
   .jumbotron {
-    min-width: 250px;
-    min-height: 500px;
-    background-position: center;
+    background-image: none;
   }
-
-  .card-deck {
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    
-  }
-  .card-text{
-    color:#9b9b9b;
-    padding-bottom: 1rem;
-  }
-  .card {
-    background-color: #1d1d1d;
-    border-color: #11101d;
-    color: white;
-    border-radius: 1rem;
-    -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
-    -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
-    box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
-  }
-
-  .card-img-bottom,
-  .card-img-mid,
-  .card-img-top {
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    opacity: 100%;
-    
-  }
-
-  .main {
-    background-color: #1d1d1d;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
-    -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
-    box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
-  }
-
-
-
-  .progress-bar {
-    text-align: right;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+  .slideshow-container {
     display: block;
-    width: 90%;   
-    position:relative;                 
-    bottom:0;           
   }
-  .progress{
-    text-align: right;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    display: block;
-    width: 90%;   
-    position:absolute;                 
-    bottom:0;  
-    margin-bottom: 20px;
-  }
+}
 
-  ::selection {
-    color: #fff;
-    background: #11101d;
+@media (min-width: 800px) {
+  .jumbotron {
+    background-image: url(./src/preview.png);
+    background-size: cover;
   }
+  .slideshow-container {
+    display: none;
+  }
+}
+.animatedtext {
+  color: #fff;
+  text-transform: uppercase;
+  line-height: 4rem;
+}
 
-  .bx {
-    text-decoration: none;
-    color: #fff;
-    margin-right: 1rem;
-    font-size: 28px;
-    opacity: 100%;
-  }
+.animatedtext-content {
+  display: block;
+  opacity: 0;
+  animation: rText 0.5s forwards;
+}
 
-  .navbar {
-    backdrop-filter: blur(10px);
-    background-color: rgba(73, 73, 73, 0.7);
-    position: fixed;
-    padding-top: 1rem;
-    width: 100%;
-    z-index: 999;
-    -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
-    -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
-    box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
-  }
-  
+.animatedtext-second {
+  animation-delay: 0.175s;
+}
 
-  .color1{
-    animation: colorf 5.5s;
-  }
-  .color2 {
-    animation: colors 5.5s;
-  }
-  .color3{
-    animation: colort 5.5s;
-  }
-
-  @media screen and (max-width: 767px) {
-    .jumbotron {
-      background-image:none;
-    }
-    .slideshow-container{
-      display: block;
-    }
-  }
-
-  @media (min-width: 800px) {
-    .jumbotron {
-      background-image: url(preview.png);
-      background-size: cover;
-    }
-    .slideshow-container{
-      display: none;
-    }
-  }
-  .animatedtext {
-    color: #fff;
-    text-transform: uppercase;
-    line-height: 4rem;
-  }
-  
-  .animatedtext-content {
-    display: block;
+@keyframes rText {
+  from {
     opacity: 0;
-    animation: rText 0.5s forwards;
+    transform: translateY(20px);
   }
-  
-  .animatedtext-second {
-    animation-delay: 0.175s;
+
+  to {
+    opacity: 1;
+    transform: none;
   }
-  
-  @keyframes rText {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-  
-    to {
-      opacity: 1;
-      transform: none;
-    }
-  }
-  /* Fading animation */
+}
+/* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 4.5s;
 }
 
 @keyframes fade {
-  from {opacity: 0.8} 
-  to {opacity: 1}
+  from {
+    opacity: 0.8;
+  }
+  to {
+    opacity: 1;
+  }
 }
-.rounded{
+.rounded {
   max-width: 1000px;
 }
 .btn:hover {
