--- a/custom.css
+++ b/custom.css
@@ -29,7 +29,7 @@ img {
   width: 100%;
   text-align: center;
 }
-.rgbtext{
+.rgbtext {
   background: linear-gradient(to right, rgb(255, 255, 255) 20%, #dab055 30%, #da9e44 70%, rgb(255, 255, 255) 80%);
   -webkit-background-clip: text;
   background-clip: text;
@@ -37,7 +37,7 @@ img {
   background-size: 200% auto;
   animation: textShine 7s ease-in-out infinite alternate;
 }
-.rgbtext-blue{
+.rgbtext-blue {
   background: linear-gradient(to right, rgb(172, 230, 248) 20%, #6255da 30%, #4460da 70%, rgb(71, 230, 216) 80%);
   -webkit-background-clip: text;
   background-clip: text;
@@ -51,7 +51,6 @@ img {
     background-position: 200%;
   }
 }
-
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -306,8 +305,8 @@ img {
   .slideshow-container {
     display: none;
   }
-  .navbar{
-    background: linear-gradient(to left, rgba(51, 51, 51, 0), rgba(73, 73, 73, 0.7) , rgba(51, 51, 51, 0) );
+  .navbar {
+    background: linear-gradient(to left, rgba(51, 51, 51, 0), rgba(73, 73, 73, 0.7), rgba(51, 51, 51, 0));
   }
 }
 .animatedtext {
@@ -315,8 +314,8 @@ img {
   text-transform: uppercase;
   line-height: 4rem;
 }
-.linear-bg{
-  background: linear-gradient(to bottom, #1d1d1d , #1d1d1dd0 );
+.linear-bg {
+  background: linear-gradient(to bottom, #1d1d1d, #1d1d1dd0);
 }
 
 .animatedtext-content {
@@ -395,4 +394,20 @@ a:link {
 }
 a:visited {
   color: #ffffff; /* Цвет посещенных ссылок */
+}
+svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.container {
+  position: relative;
+  min-width: 100%;
+  margin: 0;
+  height: 7vw;
+  margin-bottom: -3vh;
+  background: linear-gradient(#1d1d1dd8, #1d1d1d, #1d1d1d);
+  vertical-align: middle;
+  overflow: hidden;
 }
