--- a/custom.css
+++ b/custom.css
@@ -113,19 +113,51 @@ img {
 .h3 {
   color: #9b9b9b;
   font-size: 1.5rem;
+  opacity: 0;
+}
+.h3.visible {
+  color: #9b9b9b;
+  font-size: 1.5rem;
+  opacity: 1;
+  animation: rText 0.5s forwards;
+  animation-delay: 0.175s;
+  opacity: 0;
 }
 .h3d {
   color: #9b9b9b;
   font-size: 1.3rem;
   margin-left: 1rem;
   margin-right: 0.1rem;
+  opacity: 0;
+}
+.h3d.visible {
+  color: #9b9b9b;
+  font-size: 1.3rem;
+  margin-left: 1rem;
+  margin-right: 0.1rem;
+  animation: rText 0.5s forwards;
+  animation-delay: 0.175s;
+  opacity: 0;
 }
 .h2xl {
   color: white;
+  opacity: 0;
+}
+.h2xl.visible {
+  color: white;
+  opacity: 1;
+  animation: rText 0.5s forwards;
 }
 .h2xld {
   color: white;
   font-size: 2.5rem;
+  opacity: 0;
+}
+.h2xld.visible {
+  color: white;
+  font-size: 2.5rem;
+  display: block;
+  animation: rText 0.5s forwards;
 }
 .dsc {
   margin-top: 1rem;
@@ -142,6 +174,10 @@ img {
   float: left;
   width: 15vh;
   max-width: 30px;
+  opacity: 0;
+}
+.dsc-img.visible {
+  animation: card-img 2s forwards;
 }
 
 .jumbotron {
@@ -207,6 +243,8 @@ img {
 }
 
 .main {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   background-color: #1d1d1d;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -316,13 +354,25 @@ img {
   .jumbotron {
     background-image: url(./src/site-preview.png);
     background-size: cover;
+    animation: big-header-pic 1s forwards;
     padding-top: 100px;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    transition: all 0.5s;
   }
   .slideshow-container {
     display: none;
   }
   .navbar {
     background: linear-gradient(to left, rgba(51, 51, 51, 0), rgba(73, 73, 73, 0.7), rgba(51, 51, 51, 0));
+  }
+}
+@keyframes big-header-pic {
+  0% {
+    opacity: 0.95;
+  }
+  100% {
+    opacity: 1;
   }
 }
 .animatedtext {
@@ -381,6 +431,11 @@ img {
 
 .rounded {
   max-width: 1000px;
+  padding-top: 1rem;
+  opacity: 0;
+}
+.rounded.visible {
+  animation: card-img 2s forwards;
 }
 .btn:hover {
   color: #11101d;
