--- a/custom.css
+++ b/custom.css
@@ -258,12 +258,15 @@ img {
 }
 .main-transparent {
   background-color: #1d1d1d;
-  opacity: 0.9;
+  opacity: 10;
+  margin-bottom: -10px;
   padding-top: 1rem;
   padding-bottom: 1rem;
   -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
   -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
   box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  backdrop-filter: blur(5px);
 }
 
 .progress-bar {
@@ -433,6 +436,23 @@ img {
   max-width: 1000px;
   padding-top: 1rem;
   opacity: 0;
+}
+.catbg {
+  background-image: url(./src/cat.png);
+  background-size: 8rem;
+  animation: catpics 10s infinite;
+  transition: all 1s ease-out;
+}
+@keyframes catpics {
+  0% {
+    background-position: right top;
+  }
+  50% {
+    background-position: left bottom;
+  }
+  100% {
+    background-position: right top;
+  }
 }
 .rounded.visible {
   animation: card-img 2s forwards;
