--- a/custom.css
+++ b/custom.css
@@ -127,7 +127,7 @@ img {
   opacity: 0;
 }
 .h3.visible {
-  color: #9b9b9b;
+  color: white;
   font-size: 1.5rem;
   opacity: 1;
   animation: rText 0.5s forwards;
@@ -346,6 +346,7 @@ img {
   .jumbotron {
     background-image: none;
   }
+
   .slideshow-container {
     display: block;
   }
@@ -354,6 +355,7 @@ img {
   .h2xld {
     font-size: 1.5rem;
   }
+
   .slideshow-container {
     display: block;
   }
@@ -372,6 +374,11 @@ img {
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     transition: all 0.5s;
+  }
+  .dsc-end-main {
+    background-image: url("./src/index/dsc-cat.png");
+    background-size: cover;
+    background-position: center;
   }
   .slideshow-container {
     display: none;
@@ -542,4 +549,22 @@ svg.svg-animated {
     left: 0;
     opacity: 1;
   }
+}
+.dsc-end {
+  background-image: url("./src/index/s.png");
+  background-size: contain;
+  background-position: center;
+  background-color: #7a70d352;
+  min-width: 20rem;
+  width: 38vw;
+  height: 100%;
+}
+.Mail {
+  max-width: 50%;
+  transition: 1s;
+}
+.Mail:hover {
+  -webkit-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+  transition: 1s;
 }
