--- a/custom.css
+++ b/custom.css
@@ -127,7 +127,7 @@ img {
   opacity: 0;
 }
 .h3.visible {
-  color: white;
+  color: rgba(255, 255, 255, 0.5);
   font-size: 1.5rem;
   opacity: 1;
   animation: rText 0.5s forwards;
@@ -345,6 +345,10 @@ img {
 @media screen and (max-width: 767px) {
   .jumbotron {
     background-image: none;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+    display: none;
   }
 
   .slideshow-container {
@@ -570,4 +574,32 @@ svg.svg-animated {
   -webkit-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
   filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
   transition: 1s;
+}
+
+.carousel-item {
+  opacity: 0.5;
+  transition: all 0.5s;
+}
+.carousel-item.active {
+  opacity: 1;
+  transition: all 0.5s;
+}
+.card-slider {
+  background-color: #1d1d1d;
+  border-color: #11101d;
+  color: white;
+  opacity: 1;
+  border-radius: 1rem;
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.3s box-shadow, 0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
+  backface-visibility: hidden;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
+.card-slider:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
+.catbg.slider {
+  background-image: url("./src/index/bg-slider.png");
 }
