--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@ body::after {
   height: 0;
   overflow: hidden;
   z-index: -1;
-  content: url(./src/index/cat.png);
+  content: url(./src/index/cat.webp);
 }
 html {
   scroll-behavior: smooth;
@@ -371,7 +371,7 @@ img {
 }
 @media (min-width: 800px) {
   .jumbotron {
-    background-image: url(./src/index/site-preview.png);
+    background-image: url(./src/index/site-preview.webp);
     background-size: cover;
     animation: big-header-pic 1s forwards;
     padding-top: 100px;
@@ -396,7 +396,7 @@ img {
 }
 @media (min-width: 900px) {
   .dsc-end-main {
-    background-image: url("./src/index/dsc-cat.png");
+    background-image: url("./src/index/dsc-cat.webp");
     background-size: cover;
     background-position: center;
   }
@@ -461,7 +461,7 @@ img {
   opacity: 0;
 }
 .catbg {
-  background-image: url(./src/index/cat.png);
+  background-image: url(./src/index/cat.webp);
   background-size: 8rem;
   animation: catpics 10s infinite;
   transition: all 3s ease-out;
@@ -557,7 +557,7 @@ svg.svg-animated {
   }
 }
 .dsc-end {
-  background-image: url("./src/index/s.png");
+  background-image: url("./src/index/s.webp");
   background-size: contain;
   background-position: center;
   background-color: #7a70d352;
@@ -601,5 +601,5 @@ svg.svg-animated {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 .catbg.slider {
-  background-image: url("./src/index/bg-slider.png");
+  background-image: url("./src/index/bg-slider.webp");
 }
