--- a/custom.css
+++ b/custom.css
@@ -401,6 +401,9 @@ img {
   .navbar {
     background: linear-gradient(to left, rgba(51, 51, 51, 0), rgba(73, 73, 73, 0.7), rgba(51, 51, 51, 0));
   }
+  .catbg.slider {
+    background-size: 10rem !important;
+  }
 }
 @keyframes big-header-pic {
   0% {
