--- a/custom.css
+++ b/custom.css
@@ -108,12 +108,6 @@ img {
   }
 }
 /* font & text decorations */
-.hr {
-  color: white;
-  margin-top: 2rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
 .h2x {
   color: white;
   font-size: 1rem;
@@ -337,6 +331,10 @@ img {
   opacity: 0;
   display: block;
   position: sticky;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  color: rgb(255, 255, 255);
 }
 .hr.visible {
   animation: hr_anim 1s forwards;
