--- a/css/pc.css
+++ b/css/pc.css
@@ -16,7 +16,7 @@
   height: 2vw;
 }
 .github-profile-badge-name {
-  font-size: 2vw;
+  font-size: 2vw !important;
 }
 .github-profile-badge-img:hover {
   filter: drop-shadow(0 0 5px rgb(54, 54, 255));
