--- a/css/pc.css
+++ b/css/pc.css
@@ -80,7 +80,7 @@ body {
   background-color: rgb(0, 0, 0);
   color: white;
   font-family: sans-serif;
-  background-image: url("./src/pc_index/code.png");
+  background-image: url("../src/pc_index/code.png");
   background-size: 15%;
   overflow-x: hidden;
 }
