--- a/css/pc.css
+++ b/css/pc.css
@@ -5,6 +5,11 @@
 
 .gh-hover {
   transition: 1s;
+  outline: 1px solid transparent;
+  -webkit-backface-visibility: hidden;
+  transform: translateZ(0);
+  will-change: transform;
+  -webkit-perspective: 1000;
 }
 .github-profile-badge-img {
   width: 8vw !important;
@@ -20,6 +25,11 @@
 }
 .github-profile-badge-img:hover {
   filter: drop-shadow(0 0 5px rgb(54, 54, 255));
+  outline: 1px solid transparent;
+  -webkit-backface-visibility: hidden;
+  transform: translateZ(0);
+  will-change: transform;
+  -webkit-perspective: 1000;
 }
 .gh-img {
   transition: 2s;
