--- a/css/pc.css
+++ b/css/pc.css
@@ -418,6 +418,7 @@ a.bettertouch:before {
   .container {
     background: white;
     color: rgb(0, 0, 0);
+    box-shadow: 0 0 8px black;
   }
   .night.light-scheme {
     background: #eee;
